# openai-speech-gatherer

./: count.py  get.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: get.yml  manual.yml
output/: training_data.json
