[tool.poetry]
name = "repl-nix-openai-speech-gatherer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_openai_speech_gatherer"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
openai = "^1.35.10"
python-dotenv = "^1.0.1"
mutagen = "^1.47.0"
pydub = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
